@@ -3,6 +3,7 @@
         * Version 1.1.0 released
         =========================
 
+        Remove GCTACubeExposure, GCTACubePsf and GCTACubeBackground elogmeans() methods
         GCTACubeExposure, GCTACubePsf and GCTACubeBackground use energy values (#1788)
         GSkyMap::save() now overwrites files (#1787)
         Add GCTAPsfTable class (#1786)
